--- a/index.html
+++ b/index.html
@@ -75,4 +75,8 @@
         <footer>Picture Credits: Microsoft and Rare. This is just for fun. Please don't sue me :D</footer>
         
     </body>
+
+    <script type="text/javascript" src="script.js">
+        
+    </script>
 </html>
