Add rock-paper-scissors basic functionality

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 
         </div>
 
+        <div class="interactive-container">
+            <button class="game" id ='rock'>Rock!</button>
+            <button class="game" id="paper">Paper!</button>
+            <button class="game" id="scissors">Scissors!</button>
+            <div id = "round-result"></div>
+            <div id="scoreboard">
+                <div id="player-score"></div>
+                <div id="computer-score"></div>
+            </div> 
+        </div>
+
         <div class="buy-container">
             <div class="buy-words-container">
                 <div class="buy-header"><strong>Get the Game Now!</strong></div>
@@ -76,7 +87,7 @@
         
     </body>
 
-    <script type="text/javascript" src="script.js">
+    <script type="text/javascript" src="script.js" defer>
         
     </script>
 </html>
